// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modal component/panel checks * modal component renders properly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "gray",
        "flex": 1,
        "opacity": 0.8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text>
        Test1
      </Text>
    </View>
  </View>
</Modal>
`;

exports[`@modal component/panel checks * modal component renders properly 2`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={false}
>
  <View
    style={
      Object {
        "backgroundColor": "gray",
        "flex": 1,
        "opacity": 0.8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text>
        Test2
      </Text>
    </View>
  </View>
</Modal>
`;

exports[`@modal component/panel checks * modal panel render with props / children checking 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <Text>
      Modal Panel Test
    </Text>
  </View>
</View>
`;

exports[`@modal component/panel checks * modal panel renders properly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <Text>
      Modal Panel Test
    </Text>
  </View>
</View>
`;
